test_regress/t/t_tagged.out
%Error: t/t_tagged.v:34:21: Syntax error: Not expecting TAGGED under a DOT in dotted expression
   34 |       if (u matches tagged m_int .n) $stop;
      |                     ^~~~~~
        t/t_tagged.v:34:34: ... Resolving this reference
   34 |       if (u matches tagged m_int .n) $stop;
      |                                  ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged.v:41:9: Syntax error: Not expecting TAGGED under a DOT in dotted expression
   41 |         tagged m_int .n: if (n !== 123) $stop;
      |         ^~~~~~
        t/t_tagged.v:41:22: ... Resolving this reference
   41 |         tagged m_int .n: if (n !== 123) $stop;
      |                      ^
%Error: t/t_tagged.v:41:30: Can't find definition of variable: 'n'
   41 |         tagged m_int .n: if (n !== 123) $stop;
      |                              ^
%Error: t/t_tagged.v:45:21: Syntax error: Not expecting TAGGED under a DOT in dotted expression
   45 |       if (u matches tagged m_int .n) if (n != 123) $stop;
      |                     ^~~~~~
        t/t_tagged.v:45:34: ... Resolving this reference
   45 |       if (u matches tagged m_int .n) if (n != 123) $stop;
      |                                  ^
%Error: Exiting due to
